--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -74,3 +74,34 @@ aside p{
     font-style: italic;
     margin: 0;
 }
+
+main:first-letter {
+    font-size: 8em;
+    font-family: Lobster, sans-serif;
+    float: left;
+    margin-right: 20px;
+    margin-top: -25px;
+}
+
+ul{
+    width: 100%;
+    max-width: 750px;
+    margin:0 auto;
+    list-style: none;
+    background-color: grey;
+    text-align: center;
+}
+li{
+    display: inline-block;
+    text-align:center;
+    padding: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+li:hover {
+    background-color: black;
+}
